--- a/config.ini
+++ b/config.ini
@@ -8,7 +8,7 @@ success_output_folder = JAV_output
 link_mode = 0
 ; 0: 不刮削硬链接文件 1: 刮削硬链接文件
 scan_hardlink = 0
-failed_move = 0
+failed_move = 1
 auto_exit = 0
 translate_to_sc = 0
 multi_threading = 0
@@ -17,14 +17,14 @@ actor_gender = female
 del_empty_folder = 1
 ; 跳过最近(默认:30)天新修改过的.NFO，可避免整理模式(main_mode=3)和软连接(soft_link=0)时
 ; 反复刮削靠前的视频文件，0为处理所有视频文件
-nfo_skip_days = 30
+nfo_skip_days = 0
 ignore_failed_list = 0
 download_only_missing_images = 1
 mapping_table_validity = 7
 ; 一些jellyfin中特有的设置 (0:不开启， 1：开启) 比如
 ; 在jellyfin中tags和genres重复，因此可以只需保存genres到nfo中
 ; jellyfin中只需要保存thumb，不需要保存fanart
-jellyfin = 0
+jellyfin = 1
 ; 开启后tag和genere只显示演员
 actor_only_tag = 0
 sleep = 3
@@ -48,22 +48,23 @@ retry = 3
 cacert_file =
 
 [Name_Rule]
-location_rule = actor+"/"+number
-naming_rule = number+"-"+title
+location_rule = '#'+actor+'/'+number
+naming_rule = number+'-'+title
 max_title_len = 50
 ; 刮削后图片是否命名为番号
-image_naming_with_number = 0
+image_naming_with_number = 1
 ; 番号大写 1 | 0, 仅在写入数据时会进行大写转换, 搜索刮削流程则不影响
 number_uppercase = 0
 ; 自定义正则表达式, 多个正则使用空格隔开, 第一个分组为提取的番号, 若自定义正则未能匹配到番号则使用默认规则
 ; example: ([A-Za-z]{2,4}\-\d{3}) ([A-Za-z]{2,4}00\d{3})
-number_regexs = 
+number_regexs =
 
 [update]
 update_check = 1
 
 [priority]
-website = javbus,airav,fanza,xcity,mgstage,avsox,jav321,madou,javday,javmenu,javdb
+website = javdb
+; javbus,airav,fanza,xcity,mgstage,avsox,jav321,madou,javday,javmenu,javdb
 
 [escape]
 literals = \()/
@@ -72,6 +73,7 @@ folders = failed,JAV_output
 [debug_mode]
 switch = 0
 
+; 机器翻译
 [translate]
 switch = 0
 ; engine: google-free,azure,deeplx
@@ -91,11 +93,14 @@ service_site = translate.google.com
 [trailer]
 switch = 0
 
+; 用来确定是否是无码
 [uncensored]
 uncensored_prefix = PT-,S2M,BT,LAF,SMD,SMBD,SM3D2DBD,SKY-,SKYHD,CWP,CWDV,CWBD,CW3D2DBD,MKD,MKBD,MXBD,MK3D2DBD,MCB3DBD,MCBD,RHJ,MMDV
 
 [media]
+; 影片后缀
 media_type = .mp4,.avi,.rmvb,.wmv,.mov,.mkv,.flv,.ts,.webm,.iso,.mpg,.m4v
+; 字幕后缀
 sub_type = .smi,.srt,.idx,.sub,.sup,.psb,.ssa,.ass,.usf,.xss,.ssf,.rt,.lrc,.sbv,.vtt,.ttml
 
 ; 水印
@@ -115,7 +120,7 @@ extrafanart_folder = extrafanart
 switch = 1
 ; website为javbus javdb avsox xcity carib时，site censored_site uncensored_site 为获取剧情简介信息的
 ; 可选数据源站点列表。列表内站点同时并发查询，取值优先级由冒号前的序号决定，从小到大，数字小的站点没数据才会采用后面站点获得的。
-; 其中airavwiki airav avno1 58avgo是中文剧情简介，区别是airav只能查有码，avno1 airavwiki 有码无码都能查，
+; 其中airavwiki(中英混合) airav avno1 58avgo是中文剧情简介，区别是airav只能查有码，avno1 airavwiki 有码无码都能查，
 ; 58avgo只能查无码或者流出破解马赛克的影片(此功能没使用)。
 ; xcity和amazon是日语的，由于amazon商城没有番号信息，选中对应DVD的准确率仅99.6%。如果三个列表全部为空则不查询，
 ; 设置成不查询可大幅提高刮削速度。
@@ -131,10 +136,11 @@ show_result = 0
 ; 繁简转换 繁简转换模式mode=0:不转换 1:繁转简 2:简转繁
 [cc_convert]
 mode = 1
-vars = outline,series,studio,tag,title
+vars = outline,tag
+; outline,series,studio,tag,title
 
 [javdb]
-sites = 521
+sites =
 
 ; 人脸识别 locations_model=hog:方向梯度直方图(不太准确，速度快) cnn:深度学习模型(准确，需要GPU/CUDA,速度慢)
 ; uncensored_only=0:对全部封面进行人脸识别 1:只识别无码封面，有码封面直接切右半部分
@@ -147,7 +153,7 @@ aways_imagecut = 0
 aspect_ratio = 2.12
 
 [jellyfin]
-multi_part_fanart = 0
+multi_part_fanart=1
 
 [actor_photo]
 download_for_kodi = 0
