--- a/config.ini
+++ b/config.ini
@@ -49,7 +49,7 @@ cacert_file =
 
 [Name_Rule]
 location_rule = '#'+actor+'/'+number
-naming_rule = number+'-'+title
+naming_rule = number+' '+title
 max_title_len = 50
 ; 刮削后图片是否命名为番号
 image_naming_with_number = 1
