修正剧情简介

--- a/config.ini
+++ b/config.ini
@@ -125,8 +125,8 @@ switch = 1
 ; xcity和amazon是日语的，由于amazon商城没有番号信息，选中对应DVD的准确率仅99.6%。如果三个列表全部为空则不查询，
 ; 设置成不查询可大幅提高刮削速度。
 ; site=
-site=airavwiki,airav,avno1
-censored_site=airavwiki,airav,avno1
+site=airav,avno1
+censored_site=airav,avno1
 uncensored_site = 58avgo
 ; 运行模式：0:顺序执行(最慢) 1:线程池(默认值) 2:进程池(启动开销比线程池大，并发站点越多越快)
 run_mode = 1
